--- a/docs/troubleshooting/replace-sd-card.mdx
+++ b/docs/troubleshooting/replace-sd-card.mdx
@@ -54,8 +54,12 @@ replace it with a brand new one:
 
 If successful, everything should boot up normally.
 
-A card like
+
+## SD Card Sources
+
+A 64GB SD card (or, even better, 128GB) like
 [this](https://www.amazon.com/gp/product/B07FCMBLV6/ref=ppx_yo_dt_b_asin_title_o06_s00?ie=UTF8&psc=1)
-would work, but anything comparable would also suffice.  
-You can also buy pre-flashed ones from
-[Parley Labs](https://shop.parleylabs.com/collections/mine-hnt/products/sandisk-64gb-extreme-microsdxc-with-helium-firmware).
+would work, but any endurance type SD card comparable should suffice. Be careful to buy from a trusted vendor, as fake SD cards are often sold on the secondary market.
+
+You can also buy pre-flashed SD cards from
+[Parley Labs 64GB](https://shop.parleylabs.com/collections/mine-hnt/products/sandisk-64gb-extreme-microsdxc-with-helium-firmware) or [PPL 128GB](https://peoplesantenna.com/sdcard).
