Add /roles/count to validators

--- a/docs/api/blockchain/validators.mdx
+++ b/docs/api/blockchain/validators.mdx
@@ -6450,7 +6450,7 @@ This lists the activity for a validator that recently came online.
 ## Validator Activity Counts
 
 ```
-GET https://api.helium.io/v1/validators/:address/activity/count
+GET https://api.helium.io/v1/validators/:address/roles/count
 ```
 
 Count transactions that indicate activity for a validator.
