--- a/docs/faq/helium-network.mdx
+++ b/docs/faq/helium-network.mdx
@@ -56,4 +56,4 @@ The Decentralized Wireless Alliance (DeWi) is a global not-for-profit dedicated 
 ### Does the Helium community have a Discord?
 The Helium Discord is the primary communication channel for the Helium Network Community and it is the primary venue to get support for using the Network. The Helium Discord is moderated by independent members of the Helium community. 
 
-Here’s a [helpful blog about the Helium Community](https://docs.helium.com/community-governance/) and how you can join [the Helium Discord](https://discord.com/invite/helium). 
+Here’s a [helpful blog about the Helium Community](https://docs.helium.com/community-governance/) and how you can join [the Helium Discord](https://discord.gg/helium). 
