--- a/docs/use-the-network/devices/development/arduino/portenta-h7-with-lora-vision-shield/arduino.mdx
+++ b/docs/use-the-network/devices/development/arduino/portenta-h7-with-lora-vision-shield/arduino.mdx
@@ -73,7 +73,7 @@ Download and install the latest version of
 The Portenta H7 requires one Arduino board support package. Follow the
 instructions below to install it.
 
-#### Arduino SAMD Boards \(32-bits ARM Cortex-M0+\)
+#### Arduino Mbed OS Portenta Boards 
 
 To install, open your Arduino IDE:
 
