--- a/docs/api/blockchain/hotspots.mdx
+++ b/docs/api/blockchain/hotspots.mdx
@@ -811,7 +811,7 @@ This activity route will be deprecated on May 1, 2022 and will be replaced by Ro
 </Tabs>
 
 
-Lists all blockchain transactions that the given hotspot was involved in.This
+Lists all blockchain transactions that the given Hotspot was involved in. This
 route is paged using a `cursor`.
 
 <Tabs
