--- a/docs/api/blockchain/hotspots.mdx
+++ b/docs/api/blockchain/hotspots.mdx
@@ -841,7 +841,7 @@ _Query Parameters_
 
 200: OK
 
-This lists the activity for a hotspot which only had two
+This lists the activity for a Hotspot which only had two
 transactions at the time of the request.
 
 ```json
