--- a/docs/api/blockchain/hotspots.mdx
+++ b/docs/api/blockchain/hotspots.mdx
@@ -876,7 +876,7 @@ transactions at the time of the request.
 GET https://api.helium.io/v1/hotspots/:address/roles/count
 ```
 
-Count transactions that indicate activity for a hotspot.
+Count transactions that indicate activity for a Hotspot.
 
 The results are a map keyed by the given `filter_types` and the count of
 transaction of that type.
