--- a/docs/api/blockchain/validators.mdx
+++ b/docs/api/blockchain/validators.mdx
@@ -6358,7 +6358,7 @@ GET https://api.helium.io/v1/validators/:address/activity
 ```
 
 :::caution
-The `/activity` route will be deprecated on May 1, 2022 and will be replaced by [`/roles`](#validator-roles), described below
+The `/activity` route will be deprecated on May 1, 2022 and will be replaced by [`/roles`, described below](#validator-roles)
 :::
 
 Lists all blockchain transactions that the given validator was involved in. This
