--- a/docs/api/blockchain/hotspots.mdx
+++ b/docs/api/blockchain/hotspots.mdx
@@ -786,7 +786,7 @@ GET https://api.helium.io/v1/hotspots/:address/activity
 ```
 
 :::caution
-The `/activity` route will be deprecated on May 1, 2022 and will be replaced by [`/roles`](#hotspot-roles), described below
+The `/activity` route will be deprecated on May 1, 2022 and will be replaced by [`/roles`, described below](#hotspot-roles)
 :::
 
 Lists all blockchain transactions that the given Hotspot was involved in. This
