Add validator status page reference

--- a/docs/mine-hnt/validators/mainnet/deployment-guide.mdx
+++ b/docs/mine-hnt/validators/mainnet/deployment-guide.mdx
@@ -476,4 +476,6 @@ The `swarm_key` equates to your validator's unique identity on the Helium blockc
 
 Head over to the [Validator Mainnet Explorer](https://explorer-beta.helium.com/validators) and search for your Validator. This may take 10 to 15 minutes from the time that your Validator is both online and staked before it appears on explorer. You should see your 3-word validator name (`short-umber-bull` in the example above) listed. It may be easier to sort by `#`, descending, as your new Validator will be near the top of the list. Remember you can view the name of your validator through `miner info summary` or just `miner info name`.
 
+Visit the [Helium Validator Status Page](http://validators-status.helium.com/) (and sign up for alerts, if you haven't already). This status page will provide the latest updates on important issues that impact validators (chain halts or other major events).
+
 Thank you for being a part of the Helium Validators initiative.
