--- a/docs/faq/helium-network.mdx
+++ b/docs/faq/helium-network.mdx
@@ -16,7 +16,7 @@ Today, the Helium blockchain, and its hundreds of thousands of Hotspots deployed
 Hotspots enable people to own and operate a wireless network that supports a wide range of Internet of Things (IoT) devices, from smart pet collars and home delivery systems, to smart bikes and scooters, medical transport and tracking devices, cooling systems, smart lighting systems, and more. [Here’s a helpful video about how Helium works](https://www.youtube.com/watch?v=67aQeZTaqNY). 
 
 ### Can I connect my phone or computer to Hotspots?
-Not currently. The Network is designed for IoT devices that use LoRaWAN. In the future, [Helium 5G](https://www.helium.com/5g) will enable high-bandwidth devices such as smartphones to connect. 
+Not currently. The Network is designed for IoT devices that use LoRaWAN. In the future, [Helium 5G](https://www.helium.com/5G) will enable high-bandwidth devices such as smartphones to connect. 
 
 ### If I connect the Hotspot to my Wifi, am I breaking the terms of service with my Internet provider? 
 The Helium Network is not in the position or business of giving legal advice. In general, users should check the terms with individual providers and comply with applicable law.
