Added channel url for #mappers

--- a/docs/use-the-network/coverage-mapping/mappers-roadmap.mdx
+++ b/docs/use-the-network/coverage-mapping/mappers-roadmap.mdx
@@ -75,4 +75,4 @@ In order to leverage Mappers data for network verification; new ingest protocols
 ### Additional Community Input
 As with all parts of the Helium project, we look to the community to develop use cases, provide feedback, and define new features. Get involved in the Mappers project:
 * [Mappers Project GitHub](https://github.com/helium/mappers/)
-* [Helium Community Discord](https://discord.gg/helium) - `#mappers` channel.
+* [Helium Community Discord](https://discord.gg/helium) - [#mappers](https://discord.com/channels/404106811252408320/730801390431240228) channel.
