--- a/docs/mine-hnt/data-only-guides/balena-data-only-hotspot.mdx
+++ b/docs/mine-hnt/data-only-guides/balena-data-only-hotspot.mdx
@@ -23,7 +23,7 @@ and using balenaOS and [balenaCloud](https://balena.io).
 Data Only Hotspots cannot earn $HNT, at least for now, and after milestone 2
 they will earn $HNT only for Device Packet Transfer. Remember to keep an eye on
 [Light Hotspots - BETA](/mine-hnt/light-hotspots)
-and the **#gateway-development** channel on the
+and the **[#gateway-development](https://discord.com/channels/404106811252408320/784462269072277576)** channel on the
 [Helium Discord Server](https://discord.gg/helium) to check how the development
 process evolves.
 :::
