Added the #validator url

--- a/docs/mine-hnt/validators/troubleshooting.mdx
+++ b/docs/mine-hnt/validators/troubleshooting.mdx
@@ -9,7 +9,7 @@ slug: /mine-hnt/validators/troubleshooting
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-There is a ```#validator``` [Discord](https://discord.gg/helium)  channel available to reach other validator participants. Also use this channel to share feedback and report issues.
+There is a [#validator](https://discord.com/channels/404106811252408320/857353417739730954) [Discord](https://discord.gg/helium) channel available to reach other validator participants. Also use this channel to share feedback and report issues.
 
 ## View logs
 Tailing the `console.log` is always helpful to get an idea of what's going on. Assuming your data is mounted at `~/validator_data`, run:
