Added the #validator channel id

--- a/docs/mine-hnt/validators/mainnet/deployment-guide.mdx
+++ b/docs/mine-hnt/validators/mainnet/deployment-guide.mdx
@@ -12,7 +12,7 @@ This guide will cover the end-to-end process of deploying a Helium Validator on 
 
 :::info
 
-If at any point during this process you need assistance or have general questions, please join the `#validator` channel on [Helium Discord](https://discord.gg/helium).
+If at any point during this process you need assistance or have general questions, please join the [#validator](https://discord.com/channels/404106811252408320/857353417739730954) channel on [Helium Discord](https://discord.gg/helium).
 
 :::
 
