--- a/docs/mine-hnt/validators/testnet/deployment-guide.mdx
+++ b/docs/mine-hnt/validators/testnet/deployment-guide.mdx
@@ -230,7 +230,7 @@ Finally, you may be asking if there's a method to know if watchtower was success
 
 :::info
 
-If you choose to not run Watchtower for automatic updates of the Docker image during Testnet, please watch and respond to upgrade requests on the `#validators-announcements` channel on the [Helium Discord](https://discord.gg/helium) server in a timely manner.
+If you choose to not run Watchtower for automatic updates of the Docker image during Testnet, please watch and respond to upgrade requests on the [#validators-announcements](https://discord.com/channels/404106811252408320/816788105511305236) channel on the [Helium Discord](https://discord.gg/helium) server in a timely manner.
 
 :::
 
