--- a/docs/troubleshooting/replace-sd-card.mdx
+++ b/docs/troubleshooting/replace-sd-card.mdx
@@ -31,7 +31,7 @@ replace it with a brand new one:
    https://www.balena.io/etcher
 5. Download the firmware image file to Flash. 
     Note: Since 24 Jan 2022 the Firmware and Miner Images are now separated, and can have different date releases
-    Replace the `date` part of the following URL with the latest GA tagged >>FIRMWARE<< release in the Community Discord's #announcements channel. 
+    Replace the `date` part of the following URL with the latest GA tagged >>FIRMWARE<< release in the Community Discord's [#announcements](https://discord.com/channels/404106811252408320/730418759298318346) channel. 
     i.e. new firmware date of `2022.01.24.0` and `https://helium-nextgate.s3-us-west-2.amazonaws.com/artifacts/<date>-sdcard.img.gz` 
     becomes `https://helium-nextgate.s3-us-west-2.amazonaws.com/artifacts/2022.01.24.0-sdcard.img.gz`and enter that url in your browser
 6. Unzip the .gz file.
