--- a/docs/mine-hnt/data-only-guides/kerlink.mdx
+++ b/docs/mine-hnt/data-only-guides/kerlink.mdx
@@ -15,7 +15,7 @@ All Kerlink gateways share the same operating system, called KerOS. It is based 
 
 Kerlink Gateways will only mine HNT through packet transfer, and is considered a Data Only Hotspot unless you purchase a Kerlink Miner specificlly designed for the Helium Network. The ability to mine HNT with anything other than
 [Approved Hotspots](https://helium.com/mine) is not currently supported. Please
-join the [#gateway-development](https://discord.gg/helium) channel in the Helium Discord Server for
+join the [#gateway-development](https://discord.com/channels/404106811252408320/784462269072277576) channel in the Helium Discord Server for
 the latest updates.
 
 :::
