--- a/docs/use-the-network/coverage-mapping/coverage-mapping.mdx
+++ b/docs/use-the-network/coverage-mapping/coverage-mapping.mdx
@@ -15,7 +15,7 @@ Coverage mapping is a crowd-sourced effort to build a true-signal coverage map o
 
 > Coverage mapping should only be done from ground level, or slightly above it. We would like the map to indicate the expected coverage a standard sensor device would experience. If you want to fly a GPS tracker on a balloon or aircraft, please do not contribute this data to the coverage map.
 
-Be sure to check out the ongoing conversation in the dedicated `#mappers` channel on the [Helium Discord Server](https://discord.gg/helium).
+Be sure to check out the ongoing conversation in the dedicated [#mappers](https://discord.com/channels/404106811252408320/730801390431240228) channel on the [Helium Discord Server](https://discord.gg/helium).
 
 ## Mapping Projects
 
