--- a/docs/mine-hnt/data-only-guides/dragino-pg1301.mdx
+++ b/docs/mine-hnt/data-only-guides/dragino-pg1301.mdx
@@ -21,7 +21,7 @@ Raspberry Pi and Dragino PG1301 hat.
 Data Only Hotspots cannot earn $HNT, at least for now, and after
 milestone 2 they will earn $HNT only for Device Packet Transfer. Remember to
 keep an eye on [Light Hotspots - BETA](/mine-hnt/light-hotspots) and the
-**#gateway-development** channel on the
+**[#gateway-development](https://discord.com/channels/404106811252408320/784462269072277576)** channel on the
 [Helium Discord Server](https://discord.gg/helium) to check how the development
 process evolves.
 :::
