--- a/docs/mine-hnt/light-hotspots.mdx
+++ b/docs/mine-hnt/light-hotspots.mdx
@@ -100,6 +100,13 @@ Development of this code takes place in the above GitHub repo, as well at the
 **December 2021**: Validators creating challenges for software-based miners on Testnet
 **January 2022**: Hardware Audit starts for Light Hotspot manufacturers
 **February 2022**: Introduce hardware-based Hotspots on Testnet (Full Hotspots running Light Hotspot firmware). Validators create challenges using H3dex targeting.
+**Tentative: End of Q1 2022**: All HIP-19 Approved Makers participating in Testnet
+
+Assuming HIP 54 and HIP 55 pass without additional changes
+
+**Tentative: Q1/Q2 2022**: Code related to Light Hotspot merged to production, in an inactive state
+**Several weeks later**: Activate set of chain variables to enable Light Hotspots on Mainnet
+**Several weeks later**: Deactivate Miner on Light Hotspots on Mainnet such that they run gateway-rs only
 
 ## Current progress on Testnet
 Hardware-based Hotspots are now participating in a new Proof-of-Coverage with Validators on Testnet. In this test, all Hotspots use Testnet Validators for blockchain information and do not need to sync the blockchain directly. They also receive PoC Challenges from Validators.
