--- a/docs/mine-hnt/light-hotspots.mdx
+++ b/docs/mine-hnt/light-hotspots.mdx
@@ -93,27 +93,27 @@ Development of this code takes place in the above GitHub repo, as well at the
 
 # Development Timelines
 
-**March 18 2021**: Data Only Hotspots routes free packets
-**July 8 2021**: Hotspot Consensus work moves to Validators
-**July 20 2021**: Data Only Hotspots activated on Helium Network (appears on chain)
-**October 11 2021**: Data Only Hotspots mine HNT
-**December 2021**: Validators creating challenges for software-based miners on Testnet
-**January 2022**: Hardware Audit starts for Light Hotspot manufacturers
-**February 2022**: Introduce hardware-based Hotspots on Testnet (Full Hotspots running Light Hotspot firmware). Validators create challenges using H3dex targeting.
-**Tentative: End of Q1 2022**: All HIP-19 Approved Makers participating in Testnet
+- **March 18 2021**: Data Only Hotspots routes free packets
+- **July 8 2021**: Hotspot Consensus work moves to Validators
+- **July 20 2021**: Data Only Hotspots activated on Helium Network (appears on chain)
+- **October 11 2021**: Data Only Hotspots mine HNT
+- **December 2021**: Validators creating challenges for software-based miners on Testnet
+- **January 2022**: Hardware Audit starts for Light Hotspot manufacturers
+- **February 2022**: Introduce hardware-based Hotspots on Testnet (Full Hotspots running Light Hotspot firmware). Validators create challenges using H3dex targeting.
+- **Tentative: End of Q1 2022**: All HIP-19 Approved Makers participating in Testnet
 
 Assuming HIP 54 and HIP 55 pass without additional changes
 
-**Tentative: Q1/Q2 2022**: Code related to Light Hotspot merged to production, in an inactive state
-**Several weeks later**: Activate set of chain variables to enable Light Hotspots on Mainnet
-**Several weeks later**: Deactivate Miner on Light Hotspots on Mainnet such that they run gateway-rs only
+- **Tentative: Q1/Q2 2022**: Code related to Light Hotspot merged to production, in an inactive state
+- **Several weeks later**: Activate set of chain variables to enable Light Hotspots on Mainnet
+- **Several weeks later**: Deactivate Miner on Light Hotspots on Mainnet such that they run gateway-rs only
 
 ## Current progress on Testnet
 Hardware-based Hotspots are now participating in a new Proof-of-Coverage with Validators on Testnet. In this test, all Hotspots use Testnet Validators for blockchain information and do not need to sync the blockchain directly. They also receive PoC Challenges from Validators.
 
-You can see their progress on testnet-explorer.helium.com.
+You can see their progress on [Testnet](testnet-explorer.helium.com).
 
-These Hotspots are also running a dockerized version of gateway-rs (rust-based gateway firmware) and an updated packet forwarder that relies on Validators.
+These Hotspots are also running a dockerized version of [gateway-rs (rust-based gateway firmware)](https://github.com/helium/gateway-rs) and an updated packet forwarder that relies on Validators.
 
 *Note that these Hotspots are earning testnet tokens (TNT) and not HNT.*
 
@@ -121,4 +121,4 @@ These Hotspots are also running a dockerized version of gateway-rs (rust-based g
 A portion of the complete Light Hotspot software is also on mainnet, transferring non-PoC packets on a test Hotspot using the new packet forwarder that relies on Validators. 
 
 ### What's Next
-Invite all Makers to participate in our Testnet test by supplying a tag on Quay, our image distribution tool, for Makers using Docker: https://quay.io/repository/team-helium/testnet?tag=latest&tab=tags. 
+Invite all Makers to participate in our Testnet test by supplying a tag on [Quay, our image distribution tool, for Makers using Docker](https://quay.io/repository/team-helium/testnet?tag=latest&tab=tags).
